2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow programs to override `main'.

	* tools/lib/mtalpha-sim/slrt.s: Jump to `main', not `t_main'.
	
	* tools/lib/mtalpha-sim/main.c: Implement `main' as a create of a
	family of one thread running `t_main'.

	* tools/lib/host-host-seqc/load.c: Encapsulate data loads in
	function `svp_start'.

	* tools/lib/host-host-seqc/slrt.c: Move `main' function to...	
	* tools/lib/host-host-seqc/main.c: ... here, and implement as a
	call to `svp_start'.
	
	* tools/lib/mtalpha.mk,
	* tools/lib/ptl.mk,	
	* tools/lib/seqc.mk: Update accordingly. Bundle `main.c' in
	`-lslc', so that it gets picked up by the linker unless the
	program overrides main.

	* tools/bin/cce.in: Link with -lslc always.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the user interface.
	
	Rename the environment variables that override external tool
	locations to names ending with `_OVERRIDE'. This allows working in
	an environment where `CC' and/or `CXX' are defined to call `slc'
	instead of `gcc', such as when using Autoconf's `configure' script
	with CC=slc.

	* tools/bin/cce.in: Rename the environment variables.

	* tools/bin/Makefile.am: Update accordingly.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make assembly optimizations more robust.

	* tools/bin/spp (pppalpha.splitsemi): Separate labels and
	instructions when they appear together.
	
	* tools/bin/spp (pppalpha.addwchll): Treat unconditional branches
	like labels as the register states are unknown upon return.

	* tools/bin/spp (pppalpha.prunenopend): Do not remove `swch' when
	it appears after a branch.

	* tools/bin/spp (pppalpha.protectend): Force a "nop" after a
	branch instruction and before "end".

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix potential bug in function call gate for MT-alpha.

	* tools/lib/mtalpha-sim/callgate.s: Also initialize $f8 and $f9,
	as they are callee-save registers too.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>
